Starting to outline the structure of the application.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <hello name="{{ name }}"></hello>
 <p>
-  Start editing to see some magic happen :)
+  This is the main dashboard page, which will have an overview of the current status and weather conditions.
 </p>
